# sfj-convert-model-gltf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
App/: CMakeLists.txt
App/include/: MeshData.h
App/res/anims/: Player.anim
App/res/meshes/: Player.mesh
App/src/: Main.cpp  MeshData.cpp
App/src/Utils/: Log.cpp
cmake/: dependencies.cmake
